--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\Users\\Killerpony\\anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\Killerpony\\anaconda3\\python.exe",
+    "python.jediEnabled": false,
+    "python.languageServer": "Microsoft",
+    "python.analysis.downloadChannel": "beta"
 }
