--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,14 @@
 {
-    "python.pythonPath": "C:\\Users\\Killerpony\\anaconda3\\python.exe",
+    "python.pythonPath": "c:\\Users\\Patrick\\Anaconda3\\python.exe",
     "python.jediEnabled": false,
     "python.languageServer": "Microsoft",
-    "python.analysis.downloadChannel": "beta",
+  //  "python.analysis.downloadChannel": "beta",
     "files.eol": "\n",
     "files.exclude": {
         "**.git": true,
         "**/.svn": true,
         "**/*.pyc": {"when": "$(basename).py"}, 
         "**/__pycache__": true
-    }
+    },
 
 }
